# trade-platform-backend-2

./: .gitignore  Dockerfile  alembic.ini  authREADME.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 181631164a0e_create_tables.py  5b5ccbc12096_create_trader_table.py  96dbec151afd_create_tables.py  f51cb746c1b2_create_trader_table.py
api_v1/applications/: schemas.py
api_v1/auth/: jwt_utils.py  schemas.py  utils.py  views.py
api_v1/auth/utils/: auth.py  jwt.py  queries.py  validation.py
api_v1/traders/: crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: application.py  base.py  base_model.py  db_helper.py  olena.py  trader.py  tradermodel.py
